RSSParser/src/java/antlr4_files/RSSParser.java
// Generated from C:/Users/anbra/Desktop/UTN/2doNivel/Sintaxis y Semántica de los Lenguajes/RSSParser/RSSParser/src/java/antlr4_files\RSSParser.g4 by ANTLR 4.10.1
package antlr4_files;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RSSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, WS=2, URL=3, INT=4, TXT=5, O_RSS=6, O_CHANNEL=7, O_IMG=8, O_ITEM=9, 
		O_TITLE=10, O_DESC=11, O_LINK=12, O_CATEG=13, O_COPYR=14, O_URL=15, O_HEIGHT=16, 
		O_WIDTH=17, C_RSS=18, C_CHANNEL=19, C_IMG=20, C_ITEM=21, C_TITLE=22, C_DESC=23, 
		C_LINK=24, C_CATEG=25, C_COPYR=26, C_URL=27, C_HEIGHT=28, C_WIDTH=29, 
		OPEN_XML=30, CLOSE_XML=31, ATT_VER=32, ATT_ENC=33, EQUALS=34, XML_WS=35, 
		XML_VERSION=36, XML_ENCODING=37;
	public static final int
		RULE_document = 0, RULE_xml = 1, RULE_xml_version = 2, RULE_xml_encoding = 3, 
		RULE_rss = 4, RULE_channel = 5, RULE_img = 6, RULE_item = 7, RULE_in_item = 8, 
		RULE_title = 9, RULE_desc = 10, RULE_link = 11, RULE_categ = 12, RULE_copyr = 13, 
		RULE_url = 14, RULE_height = 15, RULE_width = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "xml", "xml_version", "xml_encoding", "rss", "channel", "img", 
			"item", "in_item", "title", "desc", "link", "categ", "copyr", "url", 
			"height", "width"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'<?xml'", "'?>'", "'version'", "'encoding'", 
			"'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "WS", "URL", "INT", "TXT", "O_RSS", "O_CHANNEL", "O_IMG", 
			"O_ITEM", "O_TITLE", "O_DESC", "O_LINK", "O_CATEG", "O_COPYR", "O_URL", 
			"O_HEIGHT", "O_WIDTH", "C_RSS", "C_CHANNEL", "C_IMG", "C_ITEM", "C_TITLE", 
			"C_DESC", "C_LINK", "C_CATEG", "C_COPYR", "C_URL", "C_HEIGHT", "C_WIDTH", 
			"OPEN_XML", "CLOSE_XML", "ATT_VER", "ATT_ENC", "EQUALS", "XML_WS", "XML_VERSION", 
			"XML_ENCODING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RSSParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RSSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DocumentContext extends ParserRuleContext {
		public XmlContext xml() {
			return getRuleContext(XmlContext.class,0);
		}
		public RssContext rss() {
			return getRuleContext(RssContext.class,0);
		}
		public TerminalNode EOF() { return getToken(RSSParser.EOF, 0); }
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			xml();
			setState(35);
			rss();
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XmlContext extends ParserRuleContext {
		public TerminalNode OPEN_XML() { return getToken(RSSParser.OPEN_XML, 0); }
		public Xml_versionContext xml_version() {
			return getRuleContext(Xml_versionContext.class,0);
		}
		public TerminalNode CLOSE_XML() { return getToken(RSSParser.CLOSE_XML, 0); }
		public Xml_encodingContext xml_encoding() {
			return getRuleContext(Xml_encodingContext.class,0);
		}
		public XmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xml; }
	}

	public final XmlContext xml() throws RecognitionException {
		XmlContext _localctx = new XmlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_xml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(OPEN_XML);
			setState(39);
			xml_version();
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ATT_ENC) {
				{
				setState(40);
				xml_encoding();
				}
			}

			setState(43);
			match(CLOSE_XML);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Xml_versionContext extends ParserRuleContext {
		public TerminalNode ATT_VER() { return getToken(RSSParser.ATT_VER, 0); }
		public TerminalNode EQUALS() { return getToken(RSSParser.EQUALS, 0); }
		public TerminalNode XML_VERSION() { return getToken(RSSParser.XML_VERSION, 0); }
		public Xml_versionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xml_version; }
	}

	public final Xml_versionContext xml_version() throws RecognitionException {
		Xml_versionContext _localctx = new Xml_versionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_xml_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(ATT_VER);
			setState(46);
			match(EQUALS);
			setState(47);
			match(XML_VERSION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Xml_encodingContext extends ParserRuleContext {
		public TerminalNode ATT_ENC() { return getToken(RSSParser.ATT_ENC, 0); }
		public TerminalNode EQUALS() { return getToken(RSSParser.EQUALS, 0); }
		public TerminalNode XML_ENCODING() { return getToken(RSSParser.XML_ENCODING, 0); }
		public Xml_encodingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xml_encoding; }
	}

	public final Xml_encodingContext xml_encoding() throws RecognitionException {
		Xml_encodingContext _localctx = new Xml_encodingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_xml_encoding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(ATT_ENC);
			setState(50);
			match(EQUALS);
			setState(51);
			match(XML_ENCODING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RssContext extends ParserRuleContext {
		public TerminalNode O_RSS() { return getToken(RSSParser.O_RSS, 0); }
		public ChannelContext channel() {
			return getRuleContext(ChannelContext.class,0);
		}
		public TerminalNode C_RSS() { return getToken(RSSParser.C_RSS, 0); }
		public RssContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rss; }
	}

	public final RssContext rss() throws RecognitionException {
		RssContext _localctx = new RssContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rss);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(O_RSS);
			setState(54);
			channel();
			setState(55);
			match(C_RSS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChannelContext extends ParserRuleContext {
		public TerminalNode O_CHANNEL() { return getToken(RSSParser.O_CHANNEL, 0); }
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public DescContext desc() {
			return getRuleContext(DescContext.class,0);
		}
		public TerminalNode C_CHANNEL() { return getToken(RSSParser.C_CHANNEL, 0); }
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public CategContext categ() {
			return getRuleContext(CategContext.class,0);
		}
		public CopyrContext copyr() {
			return getRuleContext(CopyrContext.class,0);
		}
		public ImgContext img() {
			return getRuleContext(ImgContext.class,0);
		}
		public ChannelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_channel; }
	}

	public final ChannelContext channel() throws RecognitionException {
		ChannelContext _localctx = new ChannelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_channel);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(O_CHANNEL);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==O_ITEM) {
				{
				{
				setState(58);
				item();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			title();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==O_ITEM) {
				{
				{
				setState(65);
				item();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			link();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==O_ITEM) {
				{
				{
				setState(72);
				item();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			desc();
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(79);
					item();
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==O_CATEG) {
				{
				setState(85);
				categ();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(88);
					item();
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==O_COPYR) {
				{
				setState(94);
				copyr();
				}
			}

			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(97);
					item();
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==O_IMG) {
				{
				setState(103);
				img();
				}
			}

			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==O_ITEM) {
				{
				{
				setState(106);
				item();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(C_CHANNEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImgContext extends ParserRuleContext {
		public TerminalNode O_IMG() { return getToken(RSSParser.O_IMG, 0); }
		public UrlContext url() {
			return getRuleContext(UrlContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public TerminalNode C_IMG() { return getToken(RSSParser.C_IMG, 0); }
		public HeightContext height() {
			return getRuleContext(HeightContext.class,0);
		}
		public WidthContext width() {
			return getRuleContext(WidthContext.class,0);
		}
		public ImgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_img; }
	}

	public final ImgContext img() throws RecognitionException {
		ImgContext _localctx = new ImgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_img);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(O_IMG);
			setState(115);
			url();
			setState(116);
			title();
			setState(117);
			link();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==O_HEIGHT) {
				{
				setState(118);
				height();
				}
			}

			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==O_WIDTH) {
				{
				setState(121);
				width();
				}
			}

			setState(124);
			match(C_IMG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemContext extends ParserRuleContext {
		public TerminalNode O_ITEM() { return getToken(RSSParser.O_ITEM, 0); }
		public In_itemContext in_item() {
			return getRuleContext(In_itemContext.class,0);
		}
		public TerminalNode C_ITEM() { return getToken(RSSParser.C_ITEM, 0); }
		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item; }
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_item);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(O_ITEM);
			setState(127);
			in_item();
			setState(128);
			match(C_ITEM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class In_itemContext extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public DescContext desc() {
			return getRuleContext(DescContext.class,0);
		}
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public CategContext categ() {
			return getRuleContext(CategContext.class,0);
		}
		public In_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_in_item; }
	}

	public final In_itemContext in_item() throws RecognitionException {
		In_itemContext _localctx = new In_itemContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_in_item);
		int _la;
		try {
			setState(282);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,37,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				title();
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_DESC) {
					{
					setState(131);
					desc();
					}
				}

				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_LINK) {
					{
					setState(134);
					link();
					}
				}

				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_CATEG) {
					{
					setState(137);
					categ();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				desc();
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_TITLE) {
					{
					setState(141);
					title();
					}
				}

				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_LINK) {
					{
					setState(144);
					link();
					}
				}

				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_CATEG) {
					{
					setState(147);
					categ();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				link();
				setState(151);
				title();
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_DESC) {
					{
					setState(152);
					desc();
					}
				}

				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_CATEG) {
					{
					setState(155);
					categ();
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				link();
				setState(159);
				desc();
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_TITLE) {
					{
					setState(160);
					title();
					}
				}

				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_CATEG) {
					{
					setState(163);
					categ();
					}
				}

				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(166);
				categ();
				setState(167);
				title();
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_DESC) {
					{
					setState(168);
					desc();
					}
				}

				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_LINK) {
					{
					setState(171);
					link();
					}
				}

				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(174);
				categ();
				setState(175);
				desc();
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_TITLE) {
					{
					setState(176);
					title();
					}
				}

				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_LINK) {
					{
					setState(179);
					link();
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(182);
				title();
				setState(183);
				link();
				setState(184);
				desc();
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_CATEG) {
					{
					setState(185);
					categ();
					}
				}

				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(188);
				title();
				setState(189);
				categ();
				setState(190);
				desc();
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_LINK) {
					{
					setState(191);
					link();
					}
				}

				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(194);
				title();
				setState(195);
				categ();
				setState(196);
				link();
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_DESC) {
					{
					setState(197);
					desc();
					}
				}

				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(200);
				desc();
				setState(201);
				link();
				setState(202);
				title();
				setState(204);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_CATEG) {
					{
					setState(203);
					categ();
					}
				}

				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(206);
				desc();
				setState(207);
				categ();
				setState(208);
				title();
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_LINK) {
					{
					setState(209);
					link();
					}
				}

				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(212);
				desc();
				setState(213);
				categ();
				setState(214);
				link();
				setState(216);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_TITLE) {
					{
					setState(215);
					title();
					}
				}

				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(218);
				link();
				setState(219);
				categ();
				setState(220);
				title();
				setState(222);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_DESC) {
					{
					setState(221);
					desc();
					}
				}

				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(224);
				link();
				setState(225);
				categ();
				setState(226);
				desc();
				setState(228);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_TITLE) {
					{
					setState(227);
					title();
					}
				}

				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(230);
				categ();
				setState(231);
				link();
				setState(232);
				title();
				setState(234);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_DESC) {
					{
					setState(233);
					desc();
					}
				}

				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(236);
				categ();
				setState(237);
				link();
				setState(238);
				desc();
				setState(240);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==O_TITLE) {
					{
					setState(239);
					title();
					}
				}

				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(242);
				title();
				setState(243);
				desc();
				setState(244);
				categ();
				setState(245);
				link();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(247);
				title();
				setState(248);
				link();
				setState(249);
				categ();
				setState(250);
				desc();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(252);
				desc();
				setState(253);
				title();
				setState(254);
				categ();
				setState(255);
				link();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(257);
				desc();
				setState(258);
				link();
				setState(259);
				categ();
				setState(260);
				title();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(262);
				link();
				setState(263);
				title();
				setState(264);
				categ();
				setState(265);
				desc();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(267);
				link();
				setState(268);
				desc();
				setState(269);
				categ();
				setState(270);
				title();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(272);
				categ();
				setState(273);
				title();
				setState(274);
				link();
				setState(275);
				desc();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(277);
				categ();
				setState(278);
				desc();
				setState(279);
				link();
				setState(280);
				title();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TerminalNode O_TITLE() { return getToken(RSSParser.O_TITLE, 0); }
		public TerminalNode TXT() { return getToken(RSSParser.TXT, 0); }
		public TerminalNode C_TITLE() { return getToken(RSSParser.C_TITLE, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(284);
			match(O_TITLE);
			setState(285);
			match(TXT);
			setState(286);
			match(C_TITLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescContext extends ParserRuleContext {
		public TerminalNode O_DESC() { return getToken(RSSParser.O_DESC, 0); }
		public TerminalNode TXT() { return getToken(RSSParser.TXT, 0); }
		public TerminalNode C_DESC() { return getToken(RSSParser.C_DESC, 0); }
		public DescContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_desc; }
	}

	public final DescContext desc() throws RecognitionException {
		DescContext _localctx = new DescContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_desc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(288);
			match(O_DESC);
			setState(289);
			match(TXT);
			setState(290);
			match(C_DESC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkContext extends ParserRuleContext {
		public TerminalNode O_LINK() { return getToken(RSSParser.O_LINK, 0); }
		public TerminalNode URL() { return getToken(RSSParser.URL, 0); }
		public TerminalNode C_LINK() { return getToken(RSSParser.C_LINK, 0); }
		public LinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_link; }
	}

	public final LinkContext link() throws RecognitionException {
		LinkContext _localctx = new LinkContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_link);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(292);
			match(O_LINK);
			setState(293);
			match(URL);
			setState(294);
			match(C_LINK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CategContext extends ParserRuleContext {
		public TerminalNode O_CATEG() { return getToken(RSSParser.O_CATEG, 0); }
		public TerminalNode TXT() { return getToken(RSSParser.TXT, 0); }
		public TerminalNode C_CATEG() { return getToken(RSSParser.C_CATEG, 0); }
		public CategContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_categ; }
	}

	public final CategContext categ() throws RecognitionException {
		CategContext _localctx = new CategContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_categ);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(296);
			match(O_CATEG);
			setState(297);
			match(TXT);
			setState(298);
			match(C_CATEG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CopyrContext extends ParserRuleContext {
		public TerminalNode O_COPYR() { return getToken(RSSParser.O_COPYR, 0); }
		public TerminalNode TXT() { return getToken(RSSParser.TXT, 0); }
		public TerminalNode C_COPYR() { return getToken(RSSParser.C_COPYR, 0); }
		public CopyrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copyr; }
	}

	public final CopyrContext copyr() throws RecognitionException {
		CopyrContext _localctx = new CopyrContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_copyr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(300);
			match(O_COPYR);
			setState(301);
			match(TXT);
			setState(302);
			match(C_COPYR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UrlContext extends ParserRuleContext {
		public TerminalNode O_URL() { return getToken(RSSParser.O_URL, 0); }
		public TerminalNode URL() { return getToken(RSSParser.URL, 0); }
		public TerminalNode C_URL() { return getToken(RSSParser.C_URL, 0); }
		public UrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_url; }
	}

	public final UrlContext url() throws RecognitionException {
